Started work on the home page for my website

--- a/Website/master.css
+++ b/Website/master.css
@@ -1,8 +1,7 @@
-nav img{
-  width: 25px;
+body{
+  background-color: #FFFCF9;
 }
 
-header img{
-  width: 150px;
-  float: left;
+main img{
+width:250px;
 }
