--- a/Website/master.css
+++ b/Website/master.css
@@ -2,6 +2,13 @@ body{
   background-color: #FFFCF9;
 }
 
+nav img{
+  max-width: 50px;
+  max-height: 50px;
+}
+
 main img{
-width:250px;
+  float: left;
+  max-width:500px;
+  max-height:350px;
 }
