Made changes to the layout of the page.Also added a responsive link in the head section.

--- a/master.css
+++ b/master.css
@@ -7,6 +7,11 @@ nav img{
   max-height: 50px;
 }
 
+nav a{
+  text-align: center;
+  color: white;
+}
+
 main img{
   float: left;
   max-width:500px;
