Removed br tags, applied margins to accomodate style. Also changed 'about me' section inside the main section of the webpage.

--- a/master.css
+++ b/master.css
@@ -2,13 +2,25 @@ body{
   background-color: #1BE7FF;
 }
 
+nav{
+  margin-bottom: 25px;
+}
+
 main img{
   float: left;
   max-width:300px;
   max-height:300px;
 }
 
+blockquote{
+  margin-top: 30px;
+}
+
 nav img{
   max-width: 50px;
   max-height: 50px;
+}
+
+footer{
+  margin-top: 25px;
 }
