--- a/master.css
+++ b/master.css
@@ -3,7 +3,7 @@ body{
 }
 
 .jumbotron{
-  background-image: url("https://picsum.photos/g/1400/400/?random");
+  background-image: url("https://picsum.photos/1400/400/?random");
 }
 
 main{
