Adding finishing touches to webpages. Started commenting code on index and CV pages. Still need to add media queries.

--- a/master.css
+++ b/master.css
@@ -1,17 +1,30 @@
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Roboto');
+
 body{
   background-color: #F3F7F0;
 }
 
-.jumbotron{
-  background-image: url("https://picsum.photos/1400/400/?random");
+h1, h2, h3, h5{
+  font-family: 'Roboto',sans-serif;
+  color: white;
 }
 
-main{
+p, button, .font{
+  font-family: 'Playfair Display',sans-serif;
   color: white;
 }
 
 .blackText{
   color:black;
+  font-family: 'Playfair Display',sans-serif;
+}
+
+.jumbotron{
+  background-image: url("https://picsum.photos/g/1400/400/?random");
+}
+
+h2{
+  margin-top: 15px;
 }
 
 blockquote{
