--- a/master.css
+++ b/master.css
@@ -53,3 +53,10 @@ blockquote{
   padding-right: 20px;
   padding-top: 20px;
 }
+
+/* Media query to get rid of photo when view port reaches mobile */
+@media only screen and (max-width: 768px){
+ div.query{
+   display: none;
+  }
+}
