Made some minor adjustments. Changed font of navbar and footer. Also made footer text bold

--- a/master.css
+++ b/master.css
@@ -7,7 +7,7 @@ body{
 }
 
 /* Changing font and color for headings */
-h1, h2, h3, h5{
+h1, h2, h3, h5, a{
   font-family: 'Roboto',sans-serif;
   color: white;
 }
